# python-azure-ai-textanalytics

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/python-azure-ai-textanalytics/: main.py
